<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clmedicao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkchome"
    tools:context=".ui.home.Nova_Medicao">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/pressao_arterial_máxima"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <EditText
                android:id="@+id/etdmax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/pressao_maxima"
                android:contentDescription="@string/pressao_maxima"
                android:digits="1234567890."
                android:ems="4"
                android:gravity="center"
                android:inputType="number"
                android:labelFor="@id/etdmax"
                android:maxLength="6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pressao_arterial_minima"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toTopOf="@+id/textView4" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <EditText
                android:id="@+id/etdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/pressao_minima"
                android:contentDescription="@string/pressao_minima"
                android:digits="1234567890."
                android:ems="4"
                android:gravity="center"
                android:inputType="number"
                android:labelFor="@id/etdmin"
                android:maxLength="6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/glicemia"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <EditText
                android:id="@+id/etdglicemia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/glicemia"
                android:contentDescription="@string/glicemia"
                android:digits="1234567890."
                android:ems="4"
                android:gravity="center"
                android:inputType="number"
                android:labelFor="@id/etdglicemia"
                android:maxLength="6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cardView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/rbjejum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:buttonTint="@android:color/holo_red_dark"
            android:text="@string/jejum"
            android:textColor="@color/fundo_verde_escuro"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rbalim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/holo_red_dark"
            android:checked="false"
            android:text="@string/alimentado"
            android:textColor="@color/fundo_verde_escuro"
            android:textSize="14sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/care_512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/data"
        android:textColor="@color/fundo_verde_escuro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txtdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="5"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/hora"
        android:textAlignment="center"
        android:textColor="@color/fundo_verde_escuro"
        app:layout_constraintBottom_toBottomOf="@+id/txtdata"
        app:layout_constraintStart_toEndOf="@+id/txtdata"
        app:layout_constraintTop_toTopOf="@+id/txtdata" />

    <TextView
        android:id="@+id/txthora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="5"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clique_para_alterar"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdata" />

    <Button
        android:id="@+id/btcad"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/salvar"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:rippleColor="@color/fundo_verde_escuro"
        app:strokeColor="@color/fundo_verde_escuro" />

    <Button
        android:id="@+id/btcancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/cancelar"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:rippleColor="@color/fundo_verde_escuro"
        app:strokeColor="@color/fundo_verde_escuro" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>