<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clcoleta"
    android:layout_width="350dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView53"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/coleta_efetuada"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bteditar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            android:text="@string/editar"
            android:textColor="@color/fundo_verde_escuro"
            app:rippleColor="@color/fundo_verde_escuro"
            app:strokeColor="@color/fundo_verde_escuro" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btexcluir"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="2"
            android:text="@string/excluir"
            android:textColor="@color/fundo_verde_escuro"
            app:rippleColor="@color/fundo_verde_escuro"
            app:strokeColor="@color/fundo_verde_escuro" />


    </LinearLayout>


    <TextView
        android:id="@+id/txtdia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/as"
        android:textColor="@color/fundo_verde_escuro"
        app:layout_constraintBottom_toBottomOf="@+id/txtdia"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/txtdia" />

    <TextView
        android:id="@+id/txthora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/maxima"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdia" />

    <TextView
        android:id="@+id/txtmax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/minima"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/txtmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/glicemia"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmax" />

    <TextView
        android:id="@+id/txtgli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/care_512" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView53"
        app:layout_constraintStart_toStartOf="@+id/textView53"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <TextView
        android:id="@+id/txtjejum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtgli"
        app:layout_constraintStart_toEndOf="@+id/txtgli"
        app:layout_constraintTop_toTopOf="@+id/txtgli" />


</androidx.constraintlayout.widget.ConstraintLayout>