<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cllista"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkchome"
    tools:context=".ui.home.Lista_Medicao">

    <ProgressBar
        android:id="@+id/mprogressBar"
        style="@android:style/Widget.Holo.ProgressBar.Small"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvmedicao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@color/azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="5"
            android:gravity="center"
            android:text="@string/data"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/view9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view9"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@color/branco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:background="@color/branco"
            app:layout_constraintBottom_toTopOf="@+id/view9"
            app:layout_constraintStart_toEndOf="@+id/txtdata"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtmax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="4"
            android:gravity="center"
            android:text="@string/pressao_maxima"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/view9"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:background="@color/branco"
            app:layout_constraintBottom_toTopOf="@+id/view9"
            app:layout_constraintStart_toEndOf="@+id/txtmax"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:ems="4"
            android:gravity="center"
            android:text="@string/pressao_minima"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/view9"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view8"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:background="@color/branco"
            app:layout_constraintBottom_toTopOf="@+id/view9"
            app:layout_constraintStart_toEndOf="@+id/txtmin"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtgli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="4"
            android:gravity="center"
            android:text="@string/glicemia"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtmin"
            app:layout_constraintEnd_toStartOf="@+id/view10"
            app:layout_constraintStart_toEndOf="@+id/view8"
            app:layout_constraintTop_toTopOf="@+id/txtmin" />

        <View
            android:id="@+id/view10"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:background="@color/branco"
            app:layout_constraintBottom_toTopOf="@+id/view9"
            app:layout_constraintEnd_toStartOf="@+id/txtjej"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtjej"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="2"
            android:gravity="center"
            android:text="@string/tipo"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtmin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtmin" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvmedicao"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>